src/eclipseworkspace/Sample/src/csd/App.java
/*----------------------------------------------------------------------------------------------------------------------
	İşlem öncesi Otomatik Tür Dönüşümü:
-----------------------------------------------------------------------------------------------------------------------*/
package csd;

class App {
	public static void main(String [] args)
	{
		int a = 1;;
		boolean b;
		
		b = a; //error
	}
}

